--- a/index.css
+++ b/index.css
@@ -16,8 +16,7 @@ body{
      background: white; 
     /* background-image: url(sh.jpg);  */
      background-repeat: no-repeat;
-     background-size: cover ;
-    
+     background-size: cover ;   
 } 
 section {
     min-height: 62.5%;
@@ -248,7 +247,6 @@ section {
     transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #0d0d0df7,
                 1px 1px 40px #060606f7
-                
 }
 .services-list div i{
     font-size: 5rem;
@@ -264,7 +262,6 @@ section {
 .services-list div p{
     font-size: 15px;
     margin: 1rem 0 3rem;
-
 }
 .services-list div a{
     text-decoration: none;
@@ -273,7 +270,6 @@ section {
     margin-top: 29px;
     display: inline-block;
 }
-
 .read {
     display: inline-block;
     padding: 12px 28px;
@@ -411,15 +407,13 @@ section {
 }
 .Projects h2 span{
     color: rgb(2, 16, 16);
-
 }
 .portfolio-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
-    padding: 70px;
-    
+    padding: 70px;   
 }
 .portfolio-container .portfolio-box{
     position: relative; 
@@ -427,7 +421,6 @@ section {
     overflow: hidden;
     display: flex;
     border-radius: 70px;
-
 }
 .portfolio-box img {
     width: 80%;
@@ -517,7 +510,6 @@ section {
     cursor: pointer;
     font-size: 15px;
 }
-
 .alert {
     width: 100%;
     background: rgb(3, 171, 73);
@@ -528,8 +520,6 @@ section {
     font-weight: 900;
     display: none;
 }
-
-
 /*=== footer ==*/
 .footer {
     display: flex;
@@ -639,11 +629,12 @@ section {
         grid-template-columns: 1fr;
     }
 }
+@media (max-width: 417px){
+    
 @media(max-width: 450px) {
     html {
         font-size: 50%;
     }
-
     .contact form .input-box input {
         width: 100%;
     }
