--- a/index.css
+++ b/index.css
@@ -529,8 +529,8 @@ section {
     align-items: center;
     flex-wrap: wrap;
     padding: 2rem 9%;
-    /*background: var(--second-bg-color);*/
-    background-color: black;
+    background: var(--second-bg-color);
+    
 }
 .footer-text p {
     font-size: 1.6rem;
